1.4.3
-----
1. Fix colours for grid select buttons.
2. Fix emblems on large lists when using dark themes.
3. Revert to previous splitter library, as new one caused views to be recreated
   when switching desktop/mobile.
4. Modify splitter code to work better on touch devices.

1.4.2
-----
 1. Fix silly typo that broke some actions.
 2. Better Qobuz emblem.
 3. Better colours for emblems.
 4. When parsing SlimBrowse key:value pairs check that value is not empty.
 5. Fix missing covers when browse albums via More -> Artist:NAME
 6. Allow activation of Dynamic Playlists listed from More -> Artist:NAME ->
    More -> Dynamic Playlists
 7. Fix showing search results when there are 10, or less, results for a
    category.
 8. Append "?r=MaterialVersion" on classic skin mods changes.
 9. Fix long-press on 'Show extra settings' not passing player ID/MAC.
10. Strip off .html when doing redirects.
11. Don't show NaN% as volume in desktop layout if no players.
12. Better volume slider for powered off players using dark/light coloured
    desktop layout.

1.4.1
-----
 1. Slightly reduce size of 'Scroll queue to current track' icon.
 2. Make current track's background slightly darker for light themes.
 3. Use toolbar text colour for LMS rescan circular progress.
 4. Use default cursor when hover over empty grid items.
 5. Only show progress total if its >= progress done.
 6. Fix colours of icons in info view.
 7. Fix loading of classic skin mods on release builds.
 8. Update Dutch translation.
 9. Fix "%1 Menu"
10. Fix colour of rating stars in bottom toolbar of desktop layout.
11. Fix initialisation of light themes.

1.4.0
-----
 1. Add (optional) screensaver that will kick in after 60 seconds if nothing is
    playing on current player.
 2. Slightly reduce size of Material's caches.
 3. Notify on server updates, and add text stating new version available to
    information dialog.
 4. When searching all categories, perform individual searches and combine
    results.