@@ -130,6 +130,7 @@
   print("  <script src=\"html/js/emblems.js?r=$version\"></script>\n");
   print("  <script src=\"html/js/currentcover.js?r=$version\"></script>\n");
   print("  <script src=\"html/js/utils.js?r=$version\"></script>\n");
+  print("  <script src=\"html/js/lmsoptions.js?r=$version\"></script>\n");
   print("  <script src=\"html/js/mediasession.js?r=$version\"></script>\n");
   print("  <script src=\"html/js/toolbar.js?r=$version\"></script>\n");
   print("  <script src=\"html/js/bottomnav.js?r=$version\"></script>\n");
